<resources>
    <string name="app_name">Traders</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_watch_list_label">fragment_watch_list</string>
    <string name="navigation_profile_label">Profile</string>
    <string name="navigation_watch_list_label">Watch list</string>
    <string name="watchlist_tab_all_crypto_label">All Crypto</string>
    <string name="watchlist_tab_favourites_label">Favourites</string>
    <string name="watchlist_tab_new_crypto_label">New crypto</string>
    <string name="crypto_price_green">+%1$s +%2$s%%</string>
    <string name="crypto_price_red">%1$s  %2$s%%</string>
    <string name="crypto_description">The live %1$s price today is %2$.2f$ with a 24h volume of %3$.2f$. Market dominance is %4$.2f%% comprised of %5$.2f$. There are %6$.0f of total circulating coins</string>

    <!--  Crypto item nav button labels  -->
    <string name="crypto_stats">Statistics</string>
    <string name="crypto_chart">Chart</string>
    <string name="crypto_desc">Description</string>

    <!--  Crypto main price statistics labels  -->
    <string name="crypto_24h_change">24h change</string>
    <string name="crypto_24h_volume">24h Volume</string>
    <string name="crypto_market_dominance">Market Dominance</string>
    <string name="crypto_market_cap">Market Cap</string>
    <string name="crypto_1h_volume">1h Volume</string>

    <!--  Crypto price statistics card headings  -->
    <string name="crypto_1hour_change_label">Last 1 hour data</string>
    <string name="crypto_24hour_change_label">Last 24 hour data </string>
    <string name="crypto_ATH_label">ATH data</string>
    <string name="crypto_roi_data_label">Roi data</string>

    <!--  Crypto last 1 hour labels  -->
    <string name="open_text">Open</string>
    <string name="high_text">High</string>
    <string name="low_text">Low</string>
    <string name="close_text">Close</string>
    <string name="volume_text">Volume</string>

    <!--  Cryrpto ATH labels  -->
    <string name="ATH_price">Price:</string>
    <string name="ATH_date">Date:</string>
    <string name="ATH_days_since">Days since:</string>
    <string name="ATH_percent_down">Percent down:</string>
    <string name="ATH_breakeven_multiple">Break even multiplication:</string>

    <!--  Crypto roi data(week, month, year) labels  -->
    <string name="roi_last1_week">Last 1 week:</string>
    <string name="roi_last1_month">Last 1 month:</string>
    <string name="roi_last3_months">Last 3 months:</string>
    <string name="roi_last1_year">Last 1 year:</string>

    <!--  Crypto chart dialog labels  -->
    <!--  Buy dialog  -->
    <string name="balance_label">Balance</string>
    <string name="balance_left_label">Balance left</string>
    <string name="price_of_coin">Price of %1$s</string>
    <string name="coin_amount">%1$s amount to get</string>

    <!--  Sell dialog  -->
    <string name="crypto_balance_label">%1$s balance</string>
    <string name="crypto_input_label">Enter %1$s to sell</string>
    <string name="usd_to_get_label">USD to get</string>
    <string name="crypto_balance_left_label">%1$s left</string>

    <!--  Crypto chart buttons  -->
    <string name="month1">1m</string>
    <string name="month3">3m</string>
    <string name="month6">6m</string>
    <string name="month12">1yr</string>

    <!--  Description tab labels  -->
    <string name="project_info">Project info</string>
    <string name="pre_history">Pre history</string>
    <string name="last_price">Last price</string>
    <string name="price_change">Price change</string>

    <string name="sell">SELL</string>
    <string name="buy">BUY</string>
    <string name="usd_input_label">Enter USD amount to spend</string>
    <string name="buy_crypto">Buy %1$s</string>
    <string name="sell_crypto">Sell %1$s</string>
    <string name="sell_input_label">Enter %1$s amount to sell</string>
    <string name="max">MAX</string>
    <string name="usd_sign">$ %1$s</string>
    <string name="usd_sign_plus">+ $%1$s</string>
    <string name="usd_sign_minus">- $%1$s</string>


    <string name="usd_balance_key">usd_balance_key</string>

    <!--  User profile  -->
    <string name="portfolio">Portfolio</string>
    <string name="history">History</string>
    <string name="asset_allocation">Asset allocation</string>
    <string name="deposit">Deposit</string>
    <string name="reset_db">Reset balance</string>
    <string name="total_balance">Total balance:</string>
    <string name="deposit_usd">Deposit USD</string>
    <string name="deposit_input_label">Enter USD amount to deposit</string>
    <string name="cancel">Cancel</string>
    <string name="portfolio_list_header">Crypto portfolio list</string>
    <string name="empty_list_message">Deposit USD to begin trading</string>
    <string name="empty_transaction_list_message">No transactions yet</string>
    <string name="transaction_history">Transaction history</string>
    <string name="watch_list">Watch list</string>

</resources>

